@@ -13,7 +13,11 @@ LanguageTool Change Log
     
 -Portuguese:
     -added/improved several rules
-    -added many dozens of compound words    
+    -added many dozens of compound words
+
+-Russian
+    -added new rules    
+    -fix sf feature request #38
      
 -Tamil:
     -Added initial support for Tamil. If the font for Tamil is not properly
